kube/examples/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asmt-aws-test-deployment
  namespace: asmt-aws
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: asmt-aws-test-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: asmt-aws-test-app
    spec:
      containers:
        - name: testerization
          image: heryv1m/testerization:v1.0.6
          ports:
            - containerPort: 9000
