kube/examples/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: asmt-aws
  name: asmt-aws-test-service
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: asmt-aws-test-app
