kube/examples/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asmt-aws-test-ingress
  namespace: asmt-aws
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: 'asmt-eks-dev-alb'
#    alb.ingress.kubernetes.io/security-groups: ''
    alb.ingress.kubernetes.io/tags: App=asmt-aws
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asmt-aws-test-service
                port:
                  number: 9000
